<resources>
    <string name="app_name">Project app</string>
    <string name="welcome">Welcome!</string>
    <string name="joinevent">Join Event</string>
    <string name="createevent">Create Event</string>
    <string name="events">Events</string>
    <string name="events_view">Events view</string>
    <string name="profiles">Profiles</string>
    <string name="images">Images</string>
    <string name="profiles_view">profiles_view</string>
    <string name="Images">Images</string>
    <string name="event">Event</string>
    <string name="organizer">Organizer</string>
    <string name="image_description" />
    <string name="menu_button" />
    <string name="menu">menu</string>
    <string name="have_promo_qr_code"> <u>Have Promo Qr Code?</u> </string>
</resources>