<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.WelcomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/wizardHatImage"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/wizard_hat"
                app:layout_constraintBottom_toTopOf="@+id/welcomePageText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/welcomePageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/welcome"
                android:fontFamily="@font/bold1"
                android:textColor="@color/red"
                android:textSize="72sp"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/orange"
                android:text="@string/createevent"
                android:textSize="17sp"
                android:fontFamily="@font/bold1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/baseline_create_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/joinEventButton"
                app:layout_constraintTop_toBottomOf="@+id/welcomePageText" />

            <Button
                android:id="@+id/joinEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/orange"
                android:text="@string/joinevent"
                android:fontFamily="@font/bold1"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/createEventButton"
                app:layout_constraintTop_toBottomOf="@+id/welcomePageText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
